Switch to using binary point